# Qt-OpenGL-OpenCL-Interoperability

./: CMakeLists.txt  main.cpp  main.hpp  renderSliceToTexture.cl
